--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
       <p>Double-click to edit a todo</p>
       <p>Written by <a href="https://github.com/special-k">Kirill Jakovlev</a></p>
     </footer>
-    <script>start()</script>
+    <script>new Todolist( document.one( 'todoapp' ) );</script>
   </body>
 </html>
