--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset=utf-8 >
     <link rel=stylesheet href=stylesheets/redtea.ui.css />
     <link rel=stylesheet href=stylesheets/base.css />
+    <link rel=stylesheet href=stylesheets/todolist.css />
     <script src=javascripts/redtea.js></script>
     <script src=javascripts/redtea.core.js></script>
     <script src=javascripts/redtea.ui.js></script>
