--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,9 @@
     <meta charset=utf-8 >
     <link rel=stylesheet href=stylesheets/redtea.ui.css />
     <link rel=stylesheet href=stylesheets/base.css />
+    <link rel=stylesheet href=stylesheets/todolist.css />
     <script src=javascripts/redtea.js></script>
     <script src=javascripts/redtea.core.js></script>
-    <script src=javascripts/redtea.ui.js></script>
-    <script src=javascripts/redtea.framework.js></script>
-    <script src=javascripts/widgets/status_bar.js></script>
-    <script src=javascripts/widgets/todo_item.js></script>
     <script src=javascripts/todolist.js></script>
     <title>Todolist</title>
   </head>
